Fix page scrollbars

--- a/styles/base.css
+++ b/styles/base.css
@@ -10,9 +10,14 @@ body {
 }
 
 body {
-  margin: 2em;
+  margin: 0;
+  padding: 2em;
   font-family: monospace;
   max-width: 1024px;
+}
+
+h1 {
+  margin-top: 0;
 }
 
 
